web/themes/custom/cloudy/src/layouts/drawer/drawer.scss
$tray-transition: opacity 0.3s ease-in, transform 0.3s ease-in-out,
  right 0.3s ease-in-out, left 0.3s ease-in-out, width 0.3s ease-in-out;

$overlay-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out,
  background 0.3s ease-in-out;

/* rtl:begin:ignore */
.drawer {
  background: $cloudy-color-neutral-0;
  opacity: 1;
  position: fixed;
  top: 0;
  height: 100vh;
	z-index: $zindex-modal;
  @include transition($tray-transition);

  h2 {
    @include type-style($cloudy-heading-3);
  }


  [dir="rtl"] &--position-end, [dir="ltr"] &--position-start {
    left: -100vw;
  }

  [dir="rtl"] &--position-start, [dir="ltr"] &--position-end {
    right: -100vw;
  }

  // already inside media query `media-breakpoint-up(lg)` because of `col-lg-` prefix
  @extend .col-lg-3;

  @include media-breakpoint-up(lg) {
    opacity: 1;
    position: static;
    transition: none;
    height: auto;

    //  hide the button
    &__open {
      display: none;
    }
  }

  // We put the is-active selector within a media query to prevent weird display
  // issues when the window is resized while the drawer is open
  @include media-breakpoint-down(lg) {
    &.is-active {
      overflow-y: scroll;
      -webkit-overflow-scrolling: touch;

      [dir="rtl"] &.drawer--position-end, [dir="ltr"] &.drawer--position-start {
        left: 0;
      }

      [dir="rtl"] &.drawer--position-start, [dir="ltr"] &.drawer--position-end {
        right: 0;
      }

      @include media-breakpoint-between(sm, lg) {
        width: 75vw;
      }

      @include media-breakpoint-up(md) {
        width: 50vw;
      }
    }
  }

  &__head {
    border-bottom: 1px solid $cloudy-color-neutral-200;
    display: flex;
    flex-direction: column;
    margin-bottom: $spacer;
    padding: $spacer * 0.5;

    @extend .d-lg-none;

    button {
      text-transform: capitalize;
    }
  }

  &__open,
  &__close {
    background: $cloudy-color-neutral-200;

    .icon {
      color: $cloudy-color-neutral-900;
    }

    &:hover {
      background: $cloudy-color-neutral-300;
    }

    [dir="rtl"] &--position-end, [dir="ltr"] &--position-start {
      margin-right: auto;
    }

    [dir="rtl"] &--position-start, [dir="ltr"] &--position-end {
      margin-left: auto;
    }
  }

  &__overlay {
    background: transparent;
    height: 100%;
    margin: 0;
    left: 0;
    opacity: 0;
    position: fixed;
    width: 100%;
    top: 0;
    transition: $overlay-transition;
    visibility: hidden;
    z-index: $zindex-modal-backdrop;

    //this feels overkill, perhaps remove
    @media (min-width: 992px) {
      display: none !important;
    }

    .is-active + & {
      background: rgba($cloudy-color-neutral-900, 0.6);
      opacity: 0.6;
      transition: $overlay-transition;
      visibility: visible;
    }
  }
}
/* rtl:end:ignore */

